Fixed Sonar issues
Signed-off-by: Pascal Wilbrink <pascal.wilbrink@alliander.com>